<resources>
    <string name="app_name">FoodDiary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 8 or more characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Sign up here</string>
    <string name="verify_pass">Verify password</string>
    <string name="send_recovery">Send recovery email</string>
    <string name="recovery_text">Enter your email down below so that we can send you a recovery email</string>
    <string name="log_out">Log out</string>
    <string name="error">Error%1$s</string>
    <string name="bookmark_frag">Bookmark fragment</string>
    <string name="personal_hint">Personal notes</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="forgot_pass_txt">Forgot password?</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_firstname_hint">Enter firstname</string>
    <string name="registration_txt">Registration form</string>
    <string name="register">Register</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_surname_hint">Enter surname</string>

    <!-- Strings related to calendar -->
    <string name="p_note_helper">Write a personal note alongside the dish\'s recipe</string>
    <string name="add_to_calendar">Add recipe to calendar</string>
    <string name="error_intent">You are missing an app that supports this feature</string>
    <string name="title">Title</string>
    <string name="link">Link</string>

    <!-- Strings related to navbar -->
    <string name="username_navbar">%1$s</string>
    <string name="full_name_navbar">%1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_browser">Browser</string>
    <string name="drawer_bookmarks">Bookmarks</string>
    <string name="drawer_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dishtype">none</string>
    <!-- Strings related to settings -->
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="system_default">System default</string>
    <string name="lang_english">English</string>
    <string name="lang_estonian">Eesti</string>
    <string name="lang_welsh">Cymraeg</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmark_recipe">Bookmark Recipe</string>

</resources>