<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_browser"
            android:title="@string/drawer_browser" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/drawer_bookmarks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
    </group>


</menu>