<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ThemeFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/darkModeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/dark_mode"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAlignment="textStart"

            />

        <RadioButton
            android:id="@+id/lightModeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/light_mode"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/systemDefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/system_default"
            android:checked="true"
            android:textAlignment="textStart" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>